cluster/templates/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: guestbook-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
    # Add domain information and TLS configuration here
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: guestbook-service
          servicePort: 80
